tests/invalid/tuple_subscript_assign/main.py
def run_case() -> None:
    t: tuple[int, int] = (1, 2)

    t[0] = 3

if __name__ == "__main__":
    run_case()
